k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: app
        image: 906401006480.dkr.ecr.ap-south-2.amazonaws.com/gitops-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
