k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app
  namespace: prod
spec:
  selector:
    app: gitops-app
  ports:
  - port: 80
    targetPort: 8080
